UPDATED erequired envs value

--- a/.env.sample
+++ b/.env.sample
@@ -9,3 +9,6 @@ GUEST_PASSWORD=
 SUPERSET_ENV=
 PEAK_USER_EMAIL=
 PEAK_USER_PASSWORD=
+COMMON_CONFIG_DATA_BUCKET=
+REDIS_ENDPOINT=
+SQLALCHEMY_DATABASE_URI=
