test reader role

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
       context: .
       args:
         SQLALCHEMY_DATABASE_URI: $SQLALCHEMY_DATABASE_URI
+        ALL_SCHEMA_READER_DATABASE_URI: $ALL_SCHEMA_READER_DATABASE_URI
         TENANT: $TENANT
         STAGE: $STAGE
         REDIS_ENDPOINT: $REDIS_ENDPOINT
