--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -13,25 +13,52 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-#
+
 black==19.3b0
 coverage==4.5.3
 elasticsearch-dbapi[aws]==0.1.2
 flake8-import-order==0.18.1
 flake8-mypy==17.8.0
 flake8==3.7.7
-flask-cors==3.0.7
 ipdb==0.12
 mypy==0.670
 nose==1.3.7
-pip-tools==3.7.0
-pre-commit==1.17.0
-psycopg2-binary==2.7.5
 pycodestyle==2.5.0
-pydruid==0.5.6
-pyhive==0.6.1
 pylint==1.9.2
 redis==3.2.1
-requests==2.22.0
 statsd==3.3.0
-tox==3.11.1
+
+# development.txt
+flask-cors==3.0.9         # via -r requirements/development.in
+psycopg2-binary==2.8.5
+pydruid>=0.6.1,<0.7
+requests==2.24.0          # via pydruid, tableschema, tabulator
+thrift-sasl==0.4.2        # via pyhive
+thrift>=0.11.0, <1.0.0    # via -r requirements/development.in, pyhive, thrift-sasl
+future==0.18.2            # via pyhive
+pyhive[hive]>=0.6.1       # via -r requirements/development.in
+certifi==2020.6.20        # via requests
+
+# integration.txt
+appdirs==1.4.4            # via virtualenv
+cfgv==3.2.0               # via pre-commit
+click==7.1.2              # via pip-compile-multi, pip-tools
+distlib==0.3.1            # via virtualenv
+filelock==3.0.12          # via tox, virtualenv
+identify==1.5.4           # via pre-commit
+importlib-metadata==1.7.0  # via pluggy, pre-commit, tox, virtualenv
+nodeenv==1.5.0            # via pre-commit
+packaging==20.4           # via tox
+pip-compile-multi==2.1.0  # via -r requirements/integration.in
+pip-tools==5.3.1          # via pip-compile-multi
+pluggy==0.13.1            # via tox
+pre-commit==2.7.1         # via -r requirements/integration.in
+py==1.9.0                 # via tox
+pyparsing==2.4.7          # via packaging
+pyyaml==5.3.1             # via pre-commit
+six==1.15.0               # via packaging, pip-tools, tox, virtualenv
+toml==0.10.1              # via pre-commit, tox
+toposort==1.5             # via pip-compile-multi
+tox==3.20.0               # via -r requirements/integration.in
+virtualenv==20.0.31       # via pre-commit, tox
+zipp==3.2.0               # via importlib-metadata
