--- a/requirements.txt
+++ b/requirements.txt
@@ -4,81 +4,127 @@
 #
 #    pip-compile --output-file=requirements.txt setup.py
 #
-alembic==1.0.11           # via flask-migrate
-amqp==2.5.0               # via kombu
-apispec[yaml]==1.3.3      # via flask-appbuilder
-asn1crypto==0.24.0        # via cryptography
-attrs==19.1.0             # via jsonschema
-babel==2.7.0              # via flask-babel
-backoff==1.8.0
-billiard==3.6.0.0         # via celery
-bleach==3.1.0
-celery==4.3.0
-cffi==1.12.3              # via cryptography
-click==6.7
-colorama==0.4.1
-contextlib2==0.5.5
-croniter==0.3.30
-cryptography==2.7
-decorator==4.4.0          # via retry
+aiohttp==3.6.2            # via slackclient
+alembic==1.4.2            # via flask-migrate
+amqp==2.6.1               # via kombu
+apispec[yaml]==3.3.1      # via flask-appbuilder
+async-timeout==3.0.1      # via aiohttp
+attrs==19.3.0             # via aiohttp, jsonschema
+babel==2.8.0              # via flask-babel
+backoff==1.10.0           # via apache-superset
+billiard==3.6.3.0         # via celery
+bleach==3.1.5             # via apache-superset
+boto3==1.14.34            # via tabulator
+botocore==1.17.34         # via boto3, s3transfer
+brotli==1.0.7             # via flask-compress
+cached-property==1.5.1    # via tableschema
+cachelib==0.1.1           # via apache-superset
+celery==4.4.7             # via apache-superset
+certifi==2020.6.20        # via requests
+cffi==1.14.1              # via cryptography
+chardet==3.0.4            # via aiohttp, requests, tabulator
+click==7.1.2              # via apache-superset, flask, flask-appbuilder, tableschema, tabulator
+colorama==0.4.3           # via apache-superset, flask-appbuilder
+contextlib2==0.6.0.post1  # via apache-superset
+croniter==0.3.34          # via apache-superset
+cryptography==3.0         # via apache-superset
+dataclasses==0.6          # via apache-superset
+decorator==4.4.2          # via retry
 defusedxml==0.6.0         # via python3-openid
-flask-appbuilder==2.1.13
-flask-babel==0.12.2       # via flask-appbuilder
-flask-caching==1.7.2
-flask-compress==1.4.0
-flask-jwt-extended==3.20.0  # via flask-appbuilder
+dnspython==2.0.0          # via email-validator
+docutils==0.15.2          # via botocore
+email-validator==1.1.1    # via flask-appbuilder
+et-xmlfile==1.0.1         # via openpyxl
+flask-appbuilder==3.0.1   # via apache-superset
+flask-babel==1.0.0        # via flask-appbuilder
+flask-caching==1.9.0      # via apache-superset
+flask-compress==1.5.0     # via apache-superset
+flask-cors==3.0.8         # via apache-superset
+flask-jwt-extended==3.24.1  # via flask-appbuilder
 flask-login==0.4.1        # via flask-appbuilder
-flask-migrate==2.5.2
+flask-migrate==2.5.3      # via apache-superset
 flask-openid==1.2.5       # via flask-appbuilder
-flask-sqlalchemy==2.4.0   # via flask-appbuilder, flask-migrate
-flask-talisman==0.7.0
-flask-wtf==0.14.2
-flask==1.1.1
-future==0.17.1            # via parsedatetime
-geographiclib==1.49       # via geopy
-geopy==1.20.0
-gunicorn==19.8.1
-humanize==0.5.1
-isodate==0.6.0
-itsdangerous==1.1.0       # via flask
-jinja2==2.10.1            # via flask, flask-babel
-jsonschema==3.0.1         # via flask-appbuilder
-kombu==4.6.3              # via celery
-mako==1.0.14              # via alembic
-markdown==3.1.1
-markupsafe==1.1.1         # via jinja2, mako
-marshmallow-enum==1.4.1   # via flask-appbuilder
-marshmallow-sqlalchemy==0.17.0  # via flask-appbuilder
-marshmallow==2.19.5       # via flask-appbuilder, marshmallow-enum, marshmallow-sqlalchemy
-msgpack==0.6.1
-numpy==1.17.0             # via pandas, pyarrow
-pandas==0.24.2
-parsedatetime==2.4
-pathlib2==2.3.4
-polyline==1.4.0
-prison==0.1.2             # via flask-appbuilder
-py==1.8.0                 # via retry
-pyarrow==0.14.1
-pycparser==2.19           # via cffi
+flask-sqlalchemy==2.4.4   # via flask-appbuilder, flask-migrate
+flask-talisman==0.7.0     # via apache-superset
+flask-wtf==0.14.3         # via apache-superset, flask-appbuilder
+flask==1.1.2              # via apache-superset, flask-appbuilder, flask-babel, flask-caching, flask-compress, flask-cors, flask-jwt-extended, flask-login, flask-migrate, flask-openid, flask-sqlalchemy, flask-wtf
+future==0.18.2            # via pyhive
+geographiclib==1.50       # via geopy
+geopy==2.0.0              # via apache-superset
+gunicorn==20.0.4          # via apache-superset
+humanize==2.5.0           # via apache-superset
+idna-ssl==1.1.0           # via aiohttp
+idna==2.10                # via email-validator, idna-ssl, requests, yarl
+ijson==3.1.post0          # via tabulator
+importlib-metadata==1.7.0  # via jsonschema, kombu, markdown
+isodate==0.6.0            # via apache-superset, tableschema
+itsdangerous==1.1.0       # via flask, flask-wtf
+jdcal==1.4.1              # via openpyxl
+jinja2==2.11.2            # via flask, flask-babel
+jmespath==0.10.0          # via boto3, botocore
+jsonlines==1.2.0          # via tabulator
+jsonschema==3.2.0         # via flask-appbuilder, tableschema
+kombu==4.6.11             # via celery
+linear-tsv==1.1.0         # via tabulator
+mako==1.1.3               # via alembic
+markdown==3.2.2           # via apache-superset
+markupsafe==1.1.1         # via jinja2, mako, wtforms
+marshmallow-enum==1.5.1   # via flask-appbuilder
+marshmallow-sqlalchemy==0.23.1  # via flask-appbuilder
+marshmallow==3.7.1        # via flask-appbuilder, marshmallow-enum, marshmallow-sqlalchemy
+msgpack==1.0.0            # via apache-superset
+multidict==4.7.6          # via aiohttp, yarl
+mysqlclient==1.4.2.post1  # via apache-superset
+natsort==7.0.1            # via croniter
+numpy==1.19.1             # via pandas, pyarrow
+openpyxl==3.0.4           # via tabulator
+packaging==20.4           # via bleach
+pandas==1.0.5             # via apache-superset
+parsedatetime==2.6        # via apache-superset
+pathlib2==2.3.5           # via apache-superset
+pillow==7.2.0             # via apache-superset
+polyline==1.4.0           # via apache-superset
+prison==0.1.3             # via flask-appbuilder
+psycopg2-binary==2.8.5    # via apache-superset
+py==1.9.0                 # via retry
+pyarrow==0.17.1           # via apache-superset
+pycparser==2.20           # via cffi
+pydruid==0.6.1            # via apache-superset
+pyhive[hive]==0.6.2       # via apache-superset
 pyjwt==1.7.1              # via flask-appbuilder, flask-jwt-extended
-pyrsistent==0.15.4        # via jsonschema
-python-dateutil==2.8.0
-python-dotenv==0.10.3
+pyparsing==2.4.7          # via packaging
+pyrsistent==0.16.0        # via jsonschema
+python-dateutil==2.8.1    # via alembic, apache-superset, botocore, croniter, flask-appbuilder, pandas, pyhive, tableschema
+python-dotenv==0.14.0     # via apache-superset
 python-editor==1.0.4      # via alembic
-python-geohash==0.8.5
-python3-openid==3.1.0     # via flask-openid
-pytz==2019.2              # via babel, celery, pandas
-pyyaml==5.1.2
-retry==0.9.2
-selenium==3.141.0
-simplejson==3.16.0
-six==1.12.0               # via bleach, cryptography, flask-jwt-extended, flask-talisman, isodate, jsonschema, pathlib2, polyline, prison, pyarrow, pyrsistent, python-dateutil, sqlalchemy-utils, wtforms-json
-sqlalchemy-utils==0.34.1
-sqlalchemy==1.3.6
-sqlparse==0.3.0
-urllib3==1.25.3           # via selenium
+python-geohash==0.8.5     # via apache-superset
+python3-openid==3.2.0     # via flask-openid
+pytz==2020.1              # via babel, celery, flask-babel, pandas
+pyyaml==5.3.1             # via apache-superset, apispec
+requests==2.24.0          # via pydruid, tableschema, tabulator
+retry==0.9.2              # via apache-superset
+rfc3986==1.4.0            # via tableschema
+s3transfer==0.3.3         # via boto3
+sasl==0.2.1               # via pyhive, thrift-sasl
+selenium==3.141.0         # via apache-superset
+simplejson==3.17.2        # via apache-superset
+six==1.15.0               # via bleach, cryptography, flask-cors, flask-jwt-extended, flask-talisman, isodate, jsonlines, jsonschema, linear-tsv, packaging, pathlib2, polyline, prison, pyrsistent, python-dateutil, sasl, sqlalchemy-utils, tableschema, tabulator, thrift, thrift-sasl, wtforms-json
+slackclient==2.5.0        # via apache-superset
+sqlalchemy-utils==0.36.8  # via apache-superset, flask-appbuilder
+sqlalchemy==1.3.18        # via alembic, apache-superset, flask-sqlalchemy, marshmallow-sqlalchemy, sqlalchemy-utils, tabulator
+sqlparse==0.3.0           # via apache-superset
+tableschema==1.19.2       # via apache-superset
+tabulator==1.52.3         # via tableschema
+thrift-sasl==0.4.2        # via pyhive
+thrift==0.13.0            # via apache-superset, pyhive, thrift-sasl
+typing-extensions==3.7.4.2  # via aiohttp, yarl
+unicodecsv==0.14.1        # via tableschema, tabulator
+urllib3==1.25.10          # via botocore, requests, selenium
 vine==1.3.0               # via amqp, celery
 webencodings==0.5.1       # via bleach
-werkzeug==0.15.5          # via flask, flask-jwt-extended
-wtforms-json==0.3.3
-wtforms==2.2.1            # via flask-wtf, wtforms-json
+werkzeug==0.15.5           # via flask, flask-jwt-extended
+wtforms-json==0.3.3       # via apache-superset
+wtforms==2.3.3            # via flask-wtf, wtforms-json
+xlrd==1.2.0               # via tabulator
+yarl==1.5.1               # via aiohttp
+zipp==3.1.0               # via importlib-metadata
