--- a/supervisord.conf
+++ b/supervisord.conf
@@ -69,8 +69,9 @@ serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 ;username=chris              ; should be same as in [*_http_server] if set
 ;password=123                ; should be same as in [*_http_server] if set
 
+
 [program:worker]
-command=celery worker -A superset.tasks.celery_app:app -l INFO -P eventlet -c 100 -Q "$STAGE-$TENANT" -n "$TENANT@%h" -Ofair
+command=celery worker -A superset.tasks.celery_app:app -l INFO -P eventlet -c 100 -Q "%(ENV_STAGE)s-%(ENV_TENANT)s" -n "%(ENV_STAGE)s-%(ENV_TENANT)s" -Ofair --without-heartbeat --without-gossip --without-mingle
 redirect_stderr=true
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
